# SimplerEconomy

./: Cargo.toml  README.md  todo.md
src/: constants.rs  culture.rs  data.rs  demandcurve.rs  desire.rs  drow.rs  firm.rs  freetimeaction.rs  good.rs  household.rs  item.rs  job.rs  lib.rs  main.rs  market.rs  markethistory.rs  offerresult.rs  pop.rs  popfinancials.rs  process.rs  specials.rs  species.rs  want.rs  world.rs
